LAB1/分析.md updated from https://stackedit.io/

--- a/LAB1/分析.md
+++ b/LAB1/分析.md
@@ -5,6 +5,40 @@
 
 <h1 id="分析">分析</h1>
 <h2 id="part-1-pc-bootstrap">Part 1: PC Bootstrap</h2>
+<p>after <code>cd lab</code>:<br>
+run <code>make qemu-gdb</code> in a ternimal, wo got:</p>
+<pre class=" language-undefined"><code class="prism language-*** language-undefined">*** Now run 'make gdb'.
+***
+qemu-system-i386 -drive file=obj/kern/kernel.img,index=0,media=disk,format=raw -serial mon:stdio -gdb tcp::26000 -D qemu.log  -S
+VNC server running on 127.0.0.1:5900
+</code></pre>
+<p>run <code>make gdb</code> in another terminal:</p>
+<pre class=" language-ruby"><code class="prism  language-ruby">gdb <span class="token operator">-</span>n <span class="token operator">-</span>x <span class="token punctuation">.</span>gdbinit
+<span class="token constant">GNU</span> <span class="token function">gdb</span> <span class="token punctuation">(</span><span class="token constant">Ubuntu</span> <span class="token number">9.2</span><span class="token operator">-</span>0ubuntu1<span class="token operator">~</span><span class="token number">20.04</span><span class="token punctuation">)</span> <span class="token number">9.2</span>
+<span class="token function">Copyright</span> <span class="token punctuation">(</span><span class="token constant">C</span><span class="token punctuation">)</span> <span class="token number">2020</span> <span class="token constant">Free</span> <span class="token constant">Software</span> <span class="token constant">Foundation</span><span class="token punctuation">,</span> <span class="token constant">Inc</span><span class="token punctuation">.</span>
+<span class="token constant">License</span> <span class="token constant">GPLv3</span><span class="token operator">+</span><span class="token punctuation">:</span> <span class="token constant">GNU</span> <span class="token constant">GPL</span> version <span class="token number">3</span> <span class="token keyword">or</span> later <span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>licenses<span class="token operator">/</span>gpl<span class="token punctuation">.</span>html<span class="token operator">&gt;</span>
+<span class="token constant">This</span> is free software<span class="token punctuation">:</span> you are free to change <span class="token keyword">and</span> redistribute it<span class="token punctuation">.</span>
+<span class="token constant">There</span> is <span class="token constant">NO</span> <span class="token constant">WARRANTY</span><span class="token punctuation">,</span> to the extent permitted by law<span class="token punctuation">.</span>
+<span class="token constant">Type</span> <span class="token string">"show copying"</span> <span class="token keyword">and</span> <span class="token string">"show warranty"</span> <span class="token keyword">for</span> details<span class="token punctuation">.</span>
+<span class="token constant">This</span> <span class="token constant">GDB</span> was configured as <span class="token string">"x86_64-linux-gnu"</span><span class="token punctuation">.</span>
+<span class="token constant">Type</span> <span class="token string">"show configuration"</span> <span class="token keyword">for</span> configuration details<span class="token punctuation">.</span>
+<span class="token constant">For</span> bug reporting instructions<span class="token punctuation">,</span> please see<span class="token punctuation">:</span>
+<span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>www<span class="token punctuation">.</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>software<span class="token operator">/</span>gdb<span class="token operator">/</span>bugs<span class="token operator">/</span><span class="token operator">&gt;</span><span class="token punctuation">.</span>
+<span class="token constant">Find</span> the <span class="token constant">GDB</span> manual <span class="token keyword">and</span> other documentation resources online at<span class="token punctuation">:</span>
+    <span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>www<span class="token punctuation">.</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>software<span class="token operator">/</span>gdb<span class="token operator">/</span>documentation<span class="token operator">/</span><span class="token operator">&gt;</span><span class="token punctuation">.</span>
+
+<span class="token constant">For</span> help<span class="token punctuation">,</span> type <span class="token string">"help"</span><span class="token punctuation">.</span>
+<span class="token constant">Type</span> <span class="token string">"apropos word"</span> to search <span class="token keyword">for</span> commands related to <span class="token string">"word"</span><span class="token punctuation">.</span>
+<span class="token operator">+</span> target remote localhost<span class="token punctuation">:</span><span class="token number">26000</span>
+warning<span class="token punctuation">:</span> <span class="token constant">No</span> executable has been specified <span class="token keyword">and</span> target does <span class="token keyword">not</span> support
+determining executable automatically<span class="token punctuation">.</span>  <span class="token constant">Try</span> using the <span class="token string">"file"</span> command<span class="token punctuation">.</span>
+<span class="token constant">The</span> target architecture is assumed to be i8086
+<span class="token punctuation">[</span>f000<span class="token symbol">:fff0</span><span class="token punctuation">]</span>    <span class="token number">0xffff0</span><span class="token punctuation">:</span>	ljmp   $<span class="token number">0x3630</span><span class="token punctuation">,</span>$<span class="token number">0xf000e05b</span>
+<span class="token number">0x0000fff0</span> <span class="token keyword">in</span> <span class="token operator">?</span><span class="token operator">?</span> <span class="token punctuation">(</span><span class="token punctuation">)</span>
+<span class="token operator">+</span> symbol<span class="token operator">-</span>file obj<span class="token operator">/</span>kern<span class="token operator">/</span>kernel
+warning<span class="token punctuation">:</span> <span class="token constant">A</span> handler <span class="token keyword">for</span> the <span class="token constant">OS</span> <span class="token constant">ABI</span> <span class="token string">"GNU/Linux"</span> is <span class="token keyword">not</span> built into this configuration
+of <span class="token constant">GDB</span><span class="token punctuation">.</span>  <span class="token constant">Attempting</span> to continue with the default i8086 settings<span class="token punctuation">.</span>
+</code></pre>
 <pre class=" language-ruby"><code class="prism  language-ruby"><span class="token operator">+</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">+</span>  <span class="token operator">&lt;</span><span class="token operator">-</span> <span class="token function">0xFFFFFFFF</span> <span class="token punctuation">(</span>4GB<span class="token punctuation">)</span>
 <span class="token operator">|</span>      <span class="token number">32</span><span class="token operator">-</span>bit      <span class="token operator">|</span>
 <span class="token operator">|</span>  memory mapped   <span class="token operator">|</span>
@@ -35,32 +69,6 @@
 <span class="token operator">|</span>                  <span class="token operator">|</span>
 <span class="token operator">+</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">+</span>  <span class="token operator">&lt;</span><span class="token operator">-</span> <span class="token number">0x00000000</span>
 
-</code></pre>
-<pre class=" language-ruby"><code class="prism  language-ruby">gdb <span class="token operator">-</span>n <span class="token operator">-</span>x <span class="token punctuation">.</span>gdbinit
-<span class="token constant">GNU</span> <span class="token function">gdb</span> <span class="token punctuation">(</span><span class="token constant">Ubuntu</span> <span class="token number">9.2</span><span class="token operator">-</span>0ubuntu1<span class="token operator">~</span><span class="token number">20.04</span><span class="token punctuation">)</span> <span class="token number">9.2</span>
-<span class="token function">Copyright</span> <span class="token punctuation">(</span><span class="token constant">C</span><span class="token punctuation">)</span> <span class="token number">2020</span> <span class="token constant">Free</span> <span class="token constant">Software</span> <span class="token constant">Foundation</span><span class="token punctuation">,</span> <span class="token constant">Inc</span><span class="token punctuation">.</span>
-<span class="token constant">License</span> <span class="token constant">GPLv3</span><span class="token operator">+</span><span class="token punctuation">:</span> <span class="token constant">GNU</span> <span class="token constant">GPL</span> version <span class="token number">3</span> <span class="token keyword">or</span> later <span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>licenses<span class="token operator">/</span>gpl<span class="token punctuation">.</span>html<span class="token operator">&gt;</span>
-<span class="token constant">This</span> is free software<span class="token punctuation">:</span> you are free to change <span class="token keyword">and</span> redistribute it<span class="token punctuation">.</span>
-<span class="token constant">There</span> is <span class="token constant">NO</span> <span class="token constant">WARRANTY</span><span class="token punctuation">,</span> to the extent permitted by law<span class="token punctuation">.</span>
-<span class="token constant">Type</span> <span class="token string">"show copying"</span> <span class="token keyword">and</span> <span class="token string">"show warranty"</span> <span class="token keyword">for</span> details<span class="token punctuation">.</span>
-<span class="token constant">This</span> <span class="token constant">GDB</span> was configured as <span class="token string">"x86_64-linux-gnu"</span><span class="token punctuation">.</span>
-<span class="token constant">Type</span> <span class="token string">"show configuration"</span> <span class="token keyword">for</span> configuration details<span class="token punctuation">.</span>
-<span class="token constant">For</span> bug reporting instructions<span class="token punctuation">,</span> please see<span class="token punctuation">:</span>
-<span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>www<span class="token punctuation">.</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>software<span class="token operator">/</span>gdb<span class="token operator">/</span>bugs<span class="token operator">/</span><span class="token operator">&gt;</span><span class="token punctuation">.</span>
-<span class="token constant">Find</span> the <span class="token constant">GDB</span> manual <span class="token keyword">and</span> other documentation resources online at<span class="token punctuation">:</span>
-    <span class="token operator">&lt;</span>http<span class="token punctuation">:</span><span class="token operator">/</span><span class="token operator">/</span>www<span class="token punctuation">.</span>gnu<span class="token punctuation">.</span>org<span class="token operator">/</span>software<span class="token operator">/</span>gdb<span class="token operator">/</span>documentation<span class="token operator">/</span><span class="token operator">&gt;</span><span class="token punctuation">.</span>
-
-<span class="token constant">For</span> help<span class="token punctuation">,</span> type <span class="token string">"help"</span><span class="token punctuation">.</span>
-<span class="token constant">Type</span> <span class="token string">"apropos word"</span> to search <span class="token keyword">for</span> commands related to <span class="token string">"word"</span><span class="token punctuation">.</span>
-<span class="token operator">+</span> target remote localhost<span class="token punctuation">:</span><span class="token number">26000</span>
-warning<span class="token punctuation">:</span> <span class="token constant">No</span> executable has been specified <span class="token keyword">and</span> target does <span class="token keyword">not</span> support
-determining executable automatically<span class="token punctuation">.</span>  <span class="token constant">Try</span> using the <span class="token string">"file"</span> command<span class="token punctuation">.</span>
-<span class="token constant">The</span> target architecture is assumed to be i8086
-<span class="token punctuation">[</span>f000<span class="token symbol">:fff0</span><span class="token punctuation">]</span>    <span class="token number">0xffff0</span><span class="token punctuation">:</span>	ljmp   $<span class="token number">0x3630</span><span class="token punctuation">,</span>$<span class="token number">0xf000e05b</span>
-<span class="token number">0x0000fff0</span> <span class="token keyword">in</span> <span class="token operator">?</span><span class="token operator">?</span> <span class="token punctuation">(</span><span class="token punctuation">)</span>
-<span class="token operator">+</span> symbol<span class="token operator">-</span>file obj<span class="token operator">/</span>kern<span class="token operator">/</span>kernel
-warning<span class="token punctuation">:</span> <span class="token constant">A</span> handler <span class="token keyword">for</span> the <span class="token constant">OS</span> <span class="token constant">ABI</span> <span class="token string">"GNU/Linux"</span> is <span class="token keyword">not</span> built into this configuration
-of <span class="token constant">GDB</span><span class="token punctuation">.</span>  <span class="token constant">Attempting</span> to continue with the default i8086 settings<span class="token punctuation">.</span>
 </code></pre>
 <p>来分析一下指令<br>
 <code>[f000:fff0] 0xffff0: ljmp $0xf000,$0xe05b</code><br>
@@ -103,6 +111,16 @@ To answer that we need to know a bit about real mode addressing. In real mode (t
 <a href="https://www.jianshu.com/p/af9d7eee635e">引用链接</a></p>
 </blockquote>
 <h2 id="part-3-the-kernel-内核">Part 3: The Kernel 内核</h2>
+<p>该部分将进入内核执行，主要讲三件事：</p>
+<ol>
+<li>开启分页模式，将虚拟地址[0, 4MB)映射到物理地址[0, 4MB)，[0xF0000000, 0xF0000000+4MB)映射到[0, 4MB）（/kern/entry.S）</li>
+<li>在控制台输出字符串（/kern/init.c）</li>
+<li>测试函数的调用过程 （/kern/init.c）</li>
+</ol>
+<p>开启分页模式<br>
+操作系统经常被加载到高虚拟地址处，比如0xf0100000，但是并不是所有机器都有这么大的物理内存。可以使用内存管理硬件做到将高地址虚拟地址映射到低地址物理内存。虚拟地址转换为物理地址的过程可用下面的图描述：<br>
+<img src="https://blog-1253119293.cos.ap-beijing.myqcloud.com/6.828/lab1/lab1_2_mmu.PNG" alt="enter image description here"><br>
+虚拟地址的高10位（0000000010B）作为页目录的下标，从页目录中获取页表的物理地址0x08001000，虚拟地址的第11~20位（0000000001B）作为页表的下标，得到该页对应的物理地址0x0000c000，最后将虚拟地址的低12位（000001010000B或者0x50）和得到的页的物理地址（0x0000c000）加得到0x00000c050就是虚拟地址0x00801050转换后的物理地址。</p>
 <h2 id="总结1-：计算机启动过程">总结1 ：计算机启动过程</h2>
 <ol>
 <li>CPU 加电后首先会读取 BIOS 的指令，对计算机进行自检。</li>
@@ -119,8 +137,10 @@ To answer that we need to know a bit about real mode addressing. In real mode (t
 <ol>
 <li><a href="https://www.jianshu.com/p/af9d7eee635e">mit6.828-lab1 系统启动</a></li>
 <li><a href="https://github.com/clann24/jos/tree/master/lab1">LAB1 exercise answer</a></li>
+<li><a href="https://www.cnblogs.com/gatsby123/p/9759153.html">MIT-6.828-JOS-lab1:C, Assembly, Tools, and Bootstrapping</a></li>
 <li><a href="https://www.cnblogs.com/fatsheep9146/p/5078179.html">超详细解答 MIT6.828 JOS学习笔记3. Exercise 1.2</a></li>
 <li><a href="https://www.cnblogs.com/fatsheep9146/p/5115086.html">超详细解答 MIT6.828 JOS学习笔记3. Exercise 1.3</a></li>
+<li><a href="https://www.cnblogs.com/fatsheep9146/p/5070145.html">超详细解答 MIT 6.828 JOS学习笔记10. Lab 1 Part 3: The kernel</a></li>
 <li><a href="https://blog.csdn.net/weixin_42427338/article/details/106904596">自学MIT 6.828心得：（一）jos的bootloader过程</a></li>
 <li><a href="https://developer.aliyun.com/article/767144">MIT 6.828 操作系统工程 2018 fall xv6 lab1 笔记</a></li>
 <li><a href="https://www.shuzhiduo.com/A/gAJGqbkXdZ/">关于虚拟空间和物理空间的总结</a></li>
