LAB1/分析.md updated from https://stackedit.io/

--- a/LAB1/分析.md
+++ b/LAB1/分析.md
@@ -4,6 +4,7 @@
 ---
 
 <h1 id="分析">分析</h1>
+<p>第一章就是分析计算机怎么启动</p>
 <h2 id="part-1-pc-bootstrap">Part 1: PC Bootstrap</h2>
 <p>after <code>cd lab</code>:<br>
 run <code>make qemu-gdb</code> in a ternimal, wo got:</p>
@@ -110,6 +111,90 @@ To answer that we need to know a bit about real mode addressing. In real mode (t
 <p>另外一个问题是，BIOS将Boot Loader加载到内存0x7C00处，加载完成后将控制权交给Boot Loader，Boot Loader然后加载操作系统的内核到内存中，那BIOS是如何判断从哪里加载Boot Loader呢？BIOS将所检查磁盘的第一个扇区(512B)载入内存，放在 0x0000:0x7c00 处， 如果该扇区的最后两个字节是“55 AA”，那么这就是一个引导扇区，这个磁盘也就是一块可引导盘。通常这个大小为 512B 的程序就称为引导程序(bootloader)。如果最后两个字节不是“55 aa”，那么 BIOS 就检查下一个磁盘驱动器，这个检查顺序也是可以在BIOS中设置的，BIOS设置存储在CMOS中。<br>
 <a href="https://www.jianshu.com/p/af9d7eee635e">引用链接</a></p>
 </blockquote>
+<h3 id="exercise-3">Exercise 3</h3>
+<p>(GDB exercise:<br>
+c :continnue<br>
+si :next step<br>
+b *address :break point<br>
+x/nx 查看内存n 位 )</p>
+<blockquote>
+<p>Take a look at the  <a href="https://pdos.csail.mit.edu/6.828/2018/labguide.html">lab tools guide</a>, especially the section on GDB commands. Even if you’re familiar with GDB, this includes some esoteric GDB commands that are useful for OS work.<br>
+Set a breakpoint at address 0x7c00, which is where the boot sector will be loaded. Continue execution until that breakpoint. Trace through the code in  boot/boot.S, using the source code and the disassembly file  obj/boot/boot.asm  to keep track of where you are. Also use the  x/i  command in GDB to disassemble sequences of instructions in the boot loader, and compare the original boot loader source code with both the disassembly in  obj/boot/boot.asm  and GDB.<br>
+Trace into  bootmain()  in  boot/main.c, and then into  readsect(). Identify the exact assembly instructions that correspond to each of the statements in  readsect(). Trace through the rest of  readsect()  and back out into  bootmain(), and identify the begin and end of the  for  loop that reads the remaining sectors of the kernel from the disk. Find out what code will run when the loop is finished, set a breakpoint there, and continue to that breakpoint. Then step through the remainder of the boot loader.</p>
+</blockquote>
+<h4 id="be-able-to-answer-the-following-questions">Be able to answer the following questions:</h4>
+<p><a href="https://github.com/clann24/jos/tree/master/lab1#exercise-3">Exercise3答案参考1</a><br>
+<a href="https://www.cnblogs.com/fatsheep9146/p/5216681.html">Exercise3答案参考2</a></p>
+<p>根据答案写的：</p>
+<blockquote>
+<p>Q: What is the last instruction of the boot loader executed</p>
+</blockquote>
+<p>In  <code>main.c</code>, it’s</p>
+<pre><code>((void (*)(void)) (ELFHDR-&gt;e_entry))();
+</code></pre>
+<p>其中ELF文件头的e_entry字段的含义是这个可执行文件的第一条指令的虚拟地址。所以这句话的含义就是把控制权转移给操作系统内核。<br>
+　　<br>
+In  <code>boot.asm</code>, it’s</p>
+<pre><code> 7d81:	ff 15 18 00 01 00    	call   *0x10018
+ (这里每个人应该都不一样)
+</code></pre>
+<blockquote>
+<p>Q: and what is the first instruction of the kernel it just loaded? It’s: <a href="https://blog.csdn.net/a747979985/article/details/94334901?utm_medium=distribute.pc_relevant.none-task-blog-OPENSEARCH-6.control&amp;depth_1-utm_source=distribute.pc_relevant.none-task-blog-OPENSEARCH-6.control">MIT6.828学习之Lab1</a>有不同的答案</p>
+</blockquote>
+<pre><code>这个第一条指令位于/kern/entry.S文件中，第一句 movw $0x1234, 0x472
+</code></pre>
+<blockquote>
+<p>Q: Where is the first instruction of the kernel?</p>
+</blockquote>
+<p>Since the last instruction the boot loader executed is  <code>call *0x10018</code>, the first instruction of the kernel should be at  <code>*0x10018</code>. Examine  <code>*0x10018</code>  using  <code>gdb</code>:</p>
+<pre><code>(gdb) x/1x 0x10018
+0x10018:  0x0010000c
+</code></pre>
+<p>so the first instruction of the kernel is at  <code>0x0010000c</code></p>
+<h3 id="exercise-5.">Exercise 5.</h3>
+<blockquote>
+<p>Trace through the first few instructions of the boot loader again and identify the first instruction that would “break” or otherwise do the wrong thing if you were to get the boot loader’s link address wrong. Then change the link address in boot/Makefrag to something wrong, run make clean, recompile the lab with make, and trace into the boot loader again to see what happens. Don’t forget to change the link address back and make clean again afterward!<br>
+这道题希望我们能够去修改boot loader的链接地址，在Lab 1中，作者引入了两个概念，一个是链接地址，一个是加载地址。</p>
+</blockquote>
+<ul>
+<li>链接地址可以理解为通过编译器链接器处理形成的可执行程序中指令的地址，即逻辑地址。</li>
+<li>加载地址则是可执行文件真正被装入内存后运行的地址，即物理地址。</li>
+</ul>
+<blockquote>
+<p>那么在boot loader中，由于在boot loader运行时还没有任何的分段处理机制，或分页处理机制，所以boot loader可执行程序中的链接地址就应该等于加载地址。在Lab中作者说，BIOS默认把boot loader加载到0x7C00内存地址处，所以就要求boot loader的链接地址也要在0x7C00处。boot loader地址的设定是在boot/Makefrag中完成的，所以根据题目的要求，我们需要改动这个文件的值。<br>
+　　<br>
+run <code>objdump -x obj/kern/kernel</code>, we get</p>
+</blockquote>
+<pre><code>obj/kern/kernel:     file format elf32-i386
+obj/kern/kernel
+architecture: i386, flags 0x00000112:
+EXEC_P, HAS_SYMS, D_PAGED
+start address 0x0010000c
+</code></pre>
+<h3 id="exercise-6.">Exercise 6.</h3>
+<blockquote>
+<p>We can examine memory using GDB’s  x  command. The  <a href="https://sourceware.org/gdb/current/onlinedocs/gdb/Memory.html">GDB manual</a>  has full details, but for now, it is enough to know that the command  x/_N_x  <em>ADDR</em>  prints  <em>N</em>  words of memory at  <em>ADDR</em>. (Note that both 'x’s in the command are lowercase.)  <em>Warning</em>: The size of a word is not a universal standard. In GNU assembly, a word is two bytes (the ‘w’ in xorw, which stands for word, means 2 bytes).<br>
+Reset the machine (exit QEMU/GDB and start them again). Examine the 8 words of memory at 0x00100000 at the point the BIOS enters the boot loader, and then again at the point the boot loader enters the kernel. Why are they different? What is there at the second breakpoint? (You do not really need to use QEMU to answer this question. Just think.)</p>
+</blockquote>
+<p>为什么会产生这种变化，因为bootmain函数在最后会把内核的各个程序段送入到内存地址0x00100000处，所以这里现在存放的就是内核的某一个段的内容，由于程序入口地址是<strong>0x0010000C</strong>，正好位于这个段中，所以可以推测，这里面存放的应该是指令段，即.text段的内容。</p>
+<p>进入boot.asm 是boot loader开始，运行到内核处结束时（((void (*)(void)) (ELFHDR-&gt;e_entry))();最后一个指令，去查看地址是7d81）<br>
+执行命令后进入内核</p>
+<pre class=" language-ruby"><code class="prism  language-ruby"><span class="token punctuation">(</span>gdb<span class="token punctuation">)</span> b <span class="token operator">*</span><span class="token number">0x7d81</span>
+<span class="token constant">Breakpoint</span> <span class="token number">1</span> at <span class="token function">0x7d81</span>
+<span class="token punctuation">(</span>gdb<span class="token punctuation">)</span> x<span class="token operator">/</span>8x <span class="token number">0x00100000</span>
+<span class="token number">0x100000</span><span class="token punctuation">:</span>	<span class="token number">0x00000000</span>	<span class="token number">0x00000000</span>	<span class="token number">0x00000000</span>	<span class="token number">0x00000000</span>
+<span class="token number">0x100010</span><span class="token punctuation">:</span>	<span class="token number">0x00000000</span>	<span class="token number">0x00000000</span>	<span class="token number">0x00000000</span>	<span class="token function">0x00000000</span>
+<span class="token punctuation">(</span>gdb<span class="token punctuation">)</span> c
+<span class="token constant">Continuing</span><span class="token punctuation">.</span>
+<span class="token constant">The</span> target architecture is assumed to be i386
+<span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token number">0x7d81</span><span class="token punctuation">:</span>	call   <span class="token operator">*</span><span class="token number">0x10018</span>
+
+<span class="token constant">Breakpoint</span> <span class="token number">1</span><span class="token punctuation">,</span> <span class="token number">0x00007d81</span> <span class="token keyword">in</span> <span class="token operator">?</span><span class="token operator">?</span> <span class="token punctuation">(</span><span class="token punctuation">)</span>
+<span class="token punctuation">(</span>gdb<span class="token punctuation">)</span> x<span class="token operator">/</span>8x <span class="token number">0x00100000</span>
+<span class="token number">0x100000</span><span class="token punctuation">:</span>	<span class="token number">0x1badb002</span>	<span class="token number">0x00000000</span>	<span class="token number">0xe4524ffe</span>	<span class="token number">0x7205c766</span>
+<span class="token number">0x100010</span><span class="token punctuation">:</span>	<span class="token number">0x34000004</span>	<span class="token number">0x2000b812</span>	<span class="token number">0x220f0011</span>	<span class="token function">0xc0200fd8</span>
+<span class="token punctuation">(</span>gdb<span class="token punctuation">)</span> 
+</code></pre>
 <h2 id="part-3-the-kernel-内核">Part 3: The Kernel 内核</h2>
 <p>该部分将进入内核执行，主要讲三件事：</p>
 <ol>
@@ -117,10 +202,52 @@ To answer that we need to know a bit about real mode addressing. In real mode (t
 <li>在控制台输出字符串（/kern/init.c）</li>
 <li>测试函数的调用过程 （/kern/init.c）</li>
 </ol>
-<p>开启分页模式<br>
-操作系统经常被加载到高虚拟地址处，比如0xf0100000，但是并不是所有机器都有这么大的物理内存。可以使用内存管理硬件做到将高地址虚拟地址映射到低地址物理内存。虚拟地址转换为物理地址的过程可用下面的图描述：<br>
+<p>开启分页模式</p>
+<p>在运行boot loader时，boot loader中的链接地址（虚拟地址）和加载地址（物理地址）是一样的。但是当进入到内核程序后，这两种地址就不再相同了。<br>
+作系统内核程序在虚拟地址空间通常会被链接到一个非常高的虚拟地址空间处，比如0xf0100000，目的就是能够让处理器的虚拟地址空间的低地址部分能够被用户利用来进行编程。</p>
+<p>但是许多的机器其实并没有能够支持0xf0100000这种地址那么大的物理内存，所以我们不能把内核的0xf0100000虚拟地址映射到物理地址0xf0100000的存储单元处。</p>
+<p>这就造成了一个问题，在我们编程时，我们应该把操作系统放在高地址处，但是在实际的计算机内存中却没有那么高的地址，这该怎么办？<br>
+　　<br>
+虚拟地址转换为物理地址的过程可用下面的图描述：<br>
 <img src="https://blog-1253119293.cos.ap-beijing.myqcloud.com/6.828/lab1/lab1_2_mmu.PNG" alt="enter image description here"><br>
 虚拟地址的高10位（0000000010B）作为页目录的下标，从页目录中获取页表的物理地址0x08001000，虚拟地址的第11~20位（0000000001B）作为页表的下标，得到该页对应的物理地址0x0000c000，最后将虚拟地址的低12位（000001010000B或者0x50）和得到的页的物理地址（0x0000c000）加得到0x00000c050就是虚拟地址0x00801050转换后的物理地址。</p>
+<h3 id="exercise-7">Exercise 7</h3>
+<blockquote>
+<p>Use QEMU and GDB to trace into the JOS kernel and stop at the  <code>movl %eax, %cr0</code>. Examine memory at 0x00100000 and at 0xf0100000. Now, single step over that instruction using the  stepi  GDB command. Again, examine memory at 0x00100000 and at 0xf0100000. Make sure you understand what just happened.<br>
+What is the first instruction  <em>after</em>  the new mapping is established that would fail to work properly if the mapping weren’t in place? Comment out the  <code>movl %eax, %cr0</code>  in  kern/entry.S, trace into it, and see if you were right.</p>
+</blockquote>
+<ol>
+<li>
+<p>使用Qemu和GDB去追踪JOS内核文件，并且停止在movl %eax, %cr0指令前。此时看一下内存地址0x00100000以及0xf0100000处分别存放着什么。然后使用stepi命令执行完这条命令，再次检查这两个地址处的内容。确保你真的理解了发生了什么。</p>
+</li>
+<li>
+<p>如果这条指令movl %eax, %cr0并没有执行，而是被跳过，那么第一个会出现问题的指令是什么？我们可以通过把entry.S的这条语句加上注释来验证一下。</p>
+</li>
+</ol>
+<p><a href="https://www.cnblogs.com/fatsheep9146/p/5070145.html">Exercise7 answer reference1</a><br>
+<a href="https://yangbolong.github.io/2017/02/13/lab1-cont/">Exercise7 answer reference2—English</a></p>
+<h3 id="exercise-8">Exercise 8</h3>
+<blockquote>
+<p>We have omitted a small fragment of code - the code necessary to print octal numbers using patterns of the form “%o”. Find and fill in this code fragment.</p>
+</blockquote>
+<p><a href="https://github.com/clann24/jos/tree/master/lab1#exercise-8">answer</a></p>
+<h3 id="exercise-9">Exercise 9</h3>
+<blockquote>
+<p>Determine where the kernel initializes its stack, and exactly where in memory its stack is located. How does the kernel reserve space for its stack? And at which “end” of this reserved area is the stack pointer initialized to point to?</p>
+</blockquote>
+<p><a href="https://www.cnblogs.com/fatsheep9146/p/5079177.html">MIT 6.828 JOS学习笔记12 Exercise 1.9</a><br>
+总结： <strong>始初始化它的堆栈空间</strong></p>
+<h3 id="exercise-10">Exercise 10</h3>
+<blockquote>
+<p>To become familiar with the C calling conventions on the x86, find the address of the  <code>test_backtrace</code>  function in  obj/kern/kernel.asm, set a breakpoint there, and examine what happens each time it gets called after the kernel starts. How many 32-bit words does each recursive nesting level of  <code>test_backtrace</code>  push on the stack, and what are those words?</p>
+<p>Note that, for this exercise to work properly, you should be using the patched version of QEMU available on the  <a href="https://pdos.csail.mit.edu/6.828/2018/tools.html">tools</a>  page or on Athena. Otherwise, you’ll have to manually translate all breakpoint and memory addresses to linear addresses.</p>
+</blockquote>
+<p>为了能够更好的了解在x86上的C程序调用过程的细节，我们首先找到在obj/kern/kern.asm中test_backtrace子程序的地址， 设置断点，并且探讨一下在内核启动后，这个程序被调用时发生了什么。对于这个循环嵌套调用的程序test_backtrace，它一共压入了多少信息到堆栈之中。并且它们都代表什么含义?<br>
+<a href="https://www.cnblogs.com/fatsheep9146/p/5079930.html">MIT 6.828 JOS学习笔记13 Exercise 1.10</a><br>
+<a href="https://github.com/clann24/jos/tree/master/lab1#exercise-10">github Exercise 1.10</a></p>
+<ol>
+<li>打开obj/kern/kern.asm。在这个文件中我们查到调用test_backtrace子程序指令的地址为0xf0100040. 设置断点，并且开始调试。</li>
+</ol>
 <h2 id="总结1-：计算机启动过程">总结1 ：计算机启动过程</h2>
 <ol>
 <li>CPU 加电后首先会读取 BIOS 的指令，对计算机进行自检。</li>
@@ -140,9 +267,13 @@ To answer that we need to know a bit about real mode addressing. In real mode (t
 <li><a href="https://www.cnblogs.com/gatsby123/p/9759153.html">MIT-6.828-JOS-lab1:C, Assembly, Tools, and Bootstrapping</a></li>
 <li><a href="https://www.cnblogs.com/fatsheep9146/p/5078179.html">超详细解答 MIT6.828 JOS学习笔记3. Exercise 1.2</a></li>
 <li><a href="https://www.cnblogs.com/fatsheep9146/p/5115086.html">超详细解答 MIT6.828 JOS学习笔记3. Exercise 1.3</a></li>
+<li><a href="https://www.cnblogs.com/fatsheep9146/p/5216681.html">超详细解答 MIT 6.828 JOS学习笔记7. Lab 1 Part 2.2: The Boot Loader</a></li>
 <li><a href="https://www.cnblogs.com/fatsheep9146/p/5070145.html">超详细解答 MIT 6.828 JOS学习笔记10. Lab 1 Part 3: The kernel</a></li>
 <li><a href="https://blog.csdn.net/weixin_42427338/article/details/106904596">自学MIT 6.828心得：（一）jos的bootloader过程</a></li>
+<li><a href="https://blog.csdn.net/a747979985/article/details/94334901?utm_medium=distribute.pc_relevant.none-task-blog-OPENSEARCH-6.control&amp;depth_1-utm_source=distribute.pc_relevant.none-task-blog-OPENSEARCH-6.control">MIT6.828学习之Lab1</a></li>
 <li><a href="https://developer.aliyun.com/article/767144">MIT 6.828 操作系统工程 2018 fall xv6 lab1 笔记</a></li>
+<li><a href="https://yangbolong.github.io/2017/02/13/lab1-cont/">MIT 6.828 Lab1 - Booting a PC (The Kernel)</a></li>
 <li><a href="https://www.shuzhiduo.com/A/gAJGqbkXdZ/">关于虚拟空间和物理空间的总结</a></li>
+<li><a href="https://www.cnblogs.com/gatsby123/p/9750187.html">ELF文件格式</a></li>
 </ol>
 
